# hiring_helper

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  hello.py  hiring_helper.db  pyproject.toml  query_filtering_system.md  test.ipynb
app/api/endpoints/: extract_criteria.py
app/models/: ranking_criteria.py
app/services/: file_processing.py  scoring.py  text_extraction.py
app/tests/: test_extract_criteria.py
samples/criteria/: criteria_test.json  response_1739761650980.json
samples/job_descriptions/: senior-data-analyst.md
samples/output/: .~lock.job_match_score.csv#  filtered_resumes.csv  job_match_score.csv  rag_resume.csv
samples/resume_score/: resume_score_test.json  scores.json
samples/resumes/: jane_smith.md  john_smith.md  michael_johnson.md  moderate-fit.md  strong-fit.md  weak-fit.md
src/app/: main.py
src/app/api/endpoints/: extract_criteria.py  filter_resumes.py  rag_resumes.py  score_resumes.py  score_resumes_json.py  test_endpoint.py
src/app/core/: create_db.py  create_qdrant_db.py
src/app/models/: dataframe_transformation_model.py  job_requirements_model.py  ranking_criteria.py  resume.py  resume_score_model.py
src/app/prompts/: extract_jd.py  extract_jd_prompt.py  query_filter_prompt.py  score_resume.py  score_resume_prompt.py
src/app/services/: dataframe_processing.py  file_processing.py  format_table.py  json_processing.py  qdrant_manager.py  scoring.py  text_extraction.py  upsert_to_vector_db.py
src/app/utils/: format_table.py  transform_dataframe.py
src/tests/: test_download_csv.py  test_extract_criteria.py  test_filter_resumes.py  test_rag_resumes.py  test_score_resumes.py
