[project]
name = "hiring-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.115.8",
    "ollama>=0.4.7",
    "openai>=1.63.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
