[project]
name = "hiring-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "fastapi[standard]>=0.115.8",
    "fastembed>=0.6.0",
    "instructor>=1.7.2",
    "ipykernel>=6.29.5",
    "ollama>=0.4.7",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "pytest>=8.3.4",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.13.2",
    "sentence-transformers>=3.4.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
